# umd-core

./: AI_Handover_Document.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  PUBLISHING.md  README.md  RELEASE.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  WASM_BUILD.md  build.sh
.github/: copilot-instructions.md
docs/: README.md  architecture.md  basic-markdown-features.md  code-block-extensions.md  code-block-specification.md  comment-syntax.md  implemented-features.md  media-tags.md  planned-features.md  plugin-system.md  runtime-features.md  security-features.md  table-features.md  template-engine-spec.md  umd-extensions.md
examples/: code_block_extensions.rs  debug_color.rs  debug_subtle.rs  test_block_color.rs  test_bootstrap_integration.rs  test_comments.rs  test_comrak_table.rs  test_debug_conflict.rs  test_discord_underline.rs  test_final_colors.rs  test_footnotes.rs  test_frontmatter.rs  test_header_id.rs  test_media_embedding.rs  test_output.rs  test_plugin_extended.rs  test_plugin_table.rs  test_semantic_html.rs  test_simple_umd.rs  test_strikethrough.rs  test_table_colspan.rs  test_table_comparison.rs  test_umd_header.rs
src/: frontmatter.rs  lib.rs  parser.rs  sanitizer.rs
src/extensions/: block_decorations.rs  code_block.rs  conflict_resolver.rs  emphasis.rs  inline_decorations.rs  media.rs  mod.rs  nested_blocks.rs  plugin_markers.rs  plugins.rs  preprocessor.rs  table_colspan.rs  table_lukiwiki.rs
src/extensions/table/: mod.rs
src/extensions/table/umd/: cell_spanning.rs  decorations.rs  mod.rs  parser.rs
src/lukiwiki/: conflict_resolver.rs  inline_decorations.rs
tests/: base_url.rs  bootstrap_integration.rs  comments.rs  commonmark.rs  conflict_resolution.rs  test_semantic_integration.rs
