[package]
name = "umd"
version = "0.1.1"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
authors = ["logue"]
description = "Universal Markdown - A post-Markdown superset with Bootstrap 5 integration and extensible syntax"
repository = "https://github.com/logue/umd-core"
homepage = "https://github.com/logue/umd-core"
documentation = "https://docs.rs/umd"
readme = "README.md"
keywords = ["markdown", "parser", "commonmark", "bootstrap", "wasm"]
categories = ["parser-implementations", "text-processing", "wasm"]
exclude = [
  ".github/**",
  "target/**",
  "pkg/**",
  "AI_Handover_Document.md",
  "test_table",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.118" # WASM bindings
comrak = "0.52.0" # Markdown parser (GFM)
ammonia = "4.1.2" # HTML sanitization
maud = "0.27.0" # Type-safe HTML generation
regex = "1.12.3" # Pattern matching
once_cell = "1.21.4" # Lazy static initialization
unicode-segmentation = "1.13.2" # Grapheme cluster handling
html-escape = "0.2.13" # HTML escaping
base64 = "0.22.1" # Base64 encoding for content protection
serde_json = "1.0.149" # JSON serialization for definition lists
serde = { version = "1.0.228", features = ["derive"] } # Serialization
uuid = { version = "1.23.1", features = [
  "v4",
  "js",
] } # UUID generation for diagram IDs
math-core = "0.6.0" # LaTeX to MathML Core conversion for &math/@math

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mermaid-rs-renderer = { version = "0.2.1", default-features = false } # Mermaid SSR (native only)
syntect = "5.3.0"                                                     # Syntax highlighting (native only)

[dev-dependencies]
insta = "1.47.2"             # Snapshot testing
criterion = "0.8.2"          # Benchmarking
wasm-bindgen-test = "0.3.62" # WASM testing

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization
